# dice

./: Cargo.toml  README.md  justfile
benches/: cri_combiner.rs  cri_harville.rs  cri_harville_classic.rs  cri_harville_mass_samp.rs  cri_harville_rand_samp.rs  cri_poly_harville.rs  cri_split_combiner.rs
src/: capture.rs  comb.rs  dilative.rs  dis_cons.rs  each_way.rs  harville.rs  itemiser.rs  lib.rs  logic.rs  market.rs  matrix.rs  opt.rs  place.rs  probs.rs  random.rs  retain.rs  stream.rs  testing.rs
src/comb/: bitmap.rs  combiner.rs  enumerator.rs  generator.rs  itemiser.rs  occupied.rs  permuter.rs  split_combiner.rs  sticky.rs  sticky_permuter.rs
src/dis_cons/: group_score.rs
src/each_way/: overbroke_sim.rs  probs_sim.rs  sim.rs
src/harville/: classic.rs  mass_samp.rs  rand_samp.rs  sticky_samp.rs
src/logic/: con.rs  dis.rs
src/stream/: generator.rs  itemiser.rs  retain.rs
