[package]
name = "dice"
version = "0.1.0"
edition = "2024"

[dependencies]
tinyrand = "0.5.0"
log = "0.4.22"
env_logger = "0.11.6"
assert_float_eq = "1.1.3"
stanza = "0.5.1"
statrs = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "cri_harville_classic"
harness = false

[[bench]]
name = "cri_harville_mass_samp"
harness = false

[[bench]]
name = "cri_harville_rand_samp"
harness = false